@@ -1,6 +1,9 @@
 Flukes Release Notes:
 ---------------------
 
+11/20/12:
+- Added new standard Debian image
+
 11/11/12:
 - Renamed modify buttons to make purpose clearer
 
